[NTP::Push] Ignore pushed suggestions if they have been fetched before.

When a pushed suggestion is received, ignore it if it exists in
one of the following
- Currently shown articles.
- Dismissed articles (was already implemented before this CL).
- Archived articles (i.e. possibly shown on previously opened NTPs).

Bug: 774122
Change-Id: I46076e432b1ecd12c47e550a5faea7c0c36d6432
Reviewed-on: https://chromium-review.googlesource.com/713495
Commit-Queue: Mohamed Amir Yosef <mamir@chromium.org>
Reviewed-by: Chris Pickel <sfiera@chromium.org>
Reviewed-by: vitaliii <vitaliii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510053}
Former-commit-id: 421a9c7dfefaf01fef2012422d53fd287750c9d7